Create user from react front-end and successfully login with newly created user